--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # -----------------------------------------------------------------------------
 # Site settings
 # -----------------------------------------------------------------------------
-author: CMU MultiComp lab
-name: MML Tutorial
-title: Tutorial on Multimodal Machine Learning
+author: Polarization-base Computer Vision Tutorial Organizers
+name: Polarization-base Computer Vision Tutorial
+title: Tutorial on Polarization-base Computer Vision
 email:
 description: >
-  Tutorial on Multimodal Machine Learning
+  Tutorial on Polarization-base Computer Vision
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
@@ -16,9 +16,9 @@ baseurl: # the subpath of your site, e.g. /blog/
 # -----------------------------------------------------------------------------
 # Social integration
 # -----------------------------------------------------------------------------
-github_username: CMU-MultiComp-Lab
-google_analytics: UA-131744305-1
-youtube_channel: UCqlHIJTGYhiwQpNuPU5e2gg
+github_username:
+google_analytics:
+youtube_channel:
 rss:  # notes rss
 
 # -----------------------------------------------------------------------------
