--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 author: Polarization-base Computer Vision Tutorial Organizers
-name: Polarization-base Computer Vision Tutorial
+name: PCV Tutorial
 title: Tutorial on Polarization-base Computer Vision
 email:
 description: >
