--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -8,4 +8,14 @@
     - Muller matrices.<br/>
   readings:
     - <a href="https://arxiv.org/">Fundamentals of polarization imaging</a> <br/>
+- date: 2
+  title: >
+    <strong>Principle and representation of polarized light 2
+            </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
+  slides:
+  topics:
+    - History of polarization imaging<br/>
+    - Muller matrices.<br/>
+  readings:
+    - <a href="https://arxiv.org/">Fundamentals of polarization imaging</a> <br/>
 
