--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -1,21 +1,46 @@
-- date: 1
+- date: 900am - 940am
   title: >
-    <strong>Principle and representation of polarized light
+    <strong>Talk 1 with Q&A
+            </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
+  slides: <a href="https://slides.google.com">[slides]</a>
+  topics:
+    - Item 1<br/>
+    - Item 2<br/>
+  readings:
+    - <a href="https://arxiv.org/">Reading 1</a> <br/>
+- date: 940am - 1020am
+  title: >
+    <strong>Talk 2 with Q&A
             </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
   slides:
   topics:
-    - History of polarization imaging<br/>
-    - Muller matrices.<br/>
+    - Item 1<br/>
+    - Item 2<br/>
   readings:
-    - <a href="https://arxiv.org/">Fundamentals of polarization imaging</a> <br/>
-- date: 2
+    - <a href="https://arxiv.org/">Reading 2</a> <br/>
+- date: 1020am - 1040am
   title: >
-    <strong>Principle and representation of polarized light 2
+    <strong>Coffee breack
+  slides:
+  topics:
+  readings:
+- date: 1040am - 1120am
+  title: >
+    <strong>Talk 3 with Q&A
             </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
   slides:
   topics:
-    - History of polarization imaging<br/>
-    - Muller matrices.<br/>
+    - Item 1<br/>
+    - Item 2<br/>
   readings:
-    - <a href="https://arxiv.org/">Fundamentals of polarization imaging</a> <br/>
-
+    - <a href="https://arxiv.org/">Reading 3</a> <br/>
+- date: 1120am - 1200pm
+  title: >
+    <strong>Talk 3 with Q&A
+            </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
+  slides:
+  topics:
+    - Item 1<br/>
+    - Item 2<br/>
+  readings:
+    - <a href="https://arxiv.org/">Reading 3</a> <br/>
