Update time and program.

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -20,7 +20,7 @@
     - <a href="https://arxiv.org/">Reading 2</a> <br/>
 - date: 1020am - 1040am
   title: >
-    <strong>Coffee breack
+    <strong>Coffee Break
   slides:
   topics:
   readings:
