Update time and program.

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -1,4 +1,4 @@
-- date: 9:00 AM
+- date: 9:00 AM ~ 9:40 AM
   title: >
     <strong>Talk 1 with Q&A
             </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
