--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -1,4 +1,4 @@
-- date: 9:00 AM ~ 9:40 AM
+- date: 9:00 AM
   title: >
     <strong>Talk 1 with Q&A
             </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
@@ -18,13 +18,13 @@
     - Item 2<br/>
   readings:
     - <a href="https://arxiv.org/">Reading 2</a> <br/>
-- date: 3
+- date: 10:20 AM
   title: >
     <strong>Coffee Break</strong>
   slides:
   topics:
   readings:
-- date: 4
+- date: 10:40 AM
   title: >
     <strong>Talk 3 with Q&A
             </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
@@ -34,7 +34,7 @@
     - Item 2<br/>
   readings:
     - <a href="https://arxiv.org/">Reading 3</a> <br/>
-- date: 5
+- date: 11:20 AM
   title: >
     <strong>Talk 3 with Q&A
             </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
