--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -36,11 +36,15 @@
     - <a href="https://arxiv.org/">Reading 3</a> <br/>
 - date: 11:20 AM
   title: >
-    <strong>Talk 3 with Q&A
-            </strong> <a href="https://slides.google.com">[slides]</a> <a href="https://youtube.com">[video]</a>
+    <strong>Talk 4: Enhancing Real-world Robotic Perception with Polarimetric Imaging, with Q&A
+            </strong> <a href="https://slides.google.com">[slides (TBD)]</a> <a href="https://youtube.com">[video (TBD)]</a>
   slides:
   topics:
-    - Item 1<br/>
-    - Item 2<br/>
+    - Building Real-world Multi-modal Polarization Imaging Datasets for Autonomous Driving<br/>
+    - Outdoor Perception: Depth Estimation Under Severe Glare<br/>
+    - Outdoor Perception: Adverse Weather Conditions<br/>
+    - Outdoor Perception: Hard-to-See Objects on the Road<br/>
+    - Outdoor Perception: Dark Objects in Dark Environment<br/>
+    - Indoor Perception: Glass-aware Depth Estimation<br/>
   readings:
     - <a href="https://arxiv.org/">Reading 3</a> <br/>
