--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -42,7 +42,7 @@
   slides:
   topics:
     - Building Real-world Multi-modal Polarization Imaging Datasets for Autonomous Driving<br/>
-    - [Outdoor Perception] Depth Estimation Under Severe Glare<br/>
+    - Outdoor Perception - Depth Estimation Under Severe Glare<br/>
     - Outdoor Perception | Adverse Weather Conditions<br/>
     - Outdoor Perception | Hard-to-See Objects on the Road<br/>
     - Outdoor Perception | Dark Objects in Dark Environment<br/>
