--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -37,7 +37,8 @@
 - date: 11:20 AM
   title: >
     <strong>Talk 4: Enhancing Real-world Robotic Perception with Polarimetric Imaging, with Q&A
-            </strong></br> 
+            </strong><br/>
+    Speaker: George Chen<br/>
     <a href="https://slides.google.com">[slides (TBD)]</a> <a href="https://youtube.com">[video (TBD)]</a>
   slides:
   topics:
