test saving on github dev

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -6,6 +6,7 @@
   topics:
     - Item 1<br/>
     - Item 2<br/>
+    - Item 3
   readings:
     - <a href="https://arxiv.org/">Reading 1</a> <br/>
 - date: 9:40 AM
